# bzlmod-rules_pkg-problem

./: BUILD.bazel  MODULE.bazel  rules_pkg.patch
